--- a/PokeApp24h/app/src/main/AndroidManifest.xml
+++ b/PokeApp24h/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.romain.pokeapp24h">
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,5 +18,7 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-feature android:name="android.hardware.wifi" />
 
 </manifest>
